--- a/docs/2.md
+++ b/docs/2.md
@@ -25,7 +25,7 @@
 	
 	- Run Project!
 	
-3. XML에 속성값 넣기, 클릭 이벤트 추가 (1)
+3. XML에 속성값 넣기, 클릭 이벤트 설정 (1)
 	
 	- activity_main.xml
 	
@@ -67,7 +67,7 @@
 	```
 	- Run Project!
 
-4. XML에 속성값 넣기, 클릭 이벤트 추가 (1)
+4. XML에 속성값 넣기, 클릭 이벤트 설정 (1)
 	
 	- activity_main.xml
 	
